Modification css et Modification version mobile

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -75,7 +75,7 @@
         <li>
           <a href="{{ url('Mentions_legales') }}">Mentions légales</a>
         </li>
-        <li><a id="js-scroll-top" href="#" class="btn orange no-radius black bold">Haut de page</a></li>
+        <li><a id="js-scroll-top" href="#" class="btn btn-warning no-radius black bold">Haut de page</a></li>
       </ul>
       <p class="copyright text-muted small">Mise-en-concurence &copy; {{ "now" | date('Y') }}</p>
     </div>
