--- a/src/Flair/OrganismeBundle/Resources/views/Questions/lister.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Questions/lister.html.twig
@@ -75,7 +75,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a href="{{ url('Organisme_consultation_questions_afficher', {'id' : question.id } ) }}" class="btn btn-warning">Voir la question</a>
+                            <a href="{{ url('Organisme_consultation_questions_afficher', {'id' : question.id } ) }}"><i class="fa fa-eye" aria-hidden="true"></i> Voir la question</a>
                         </td>
                     </tr>
                 {% else %}
