--- a/src/Flair/OrganismeBundle/Resources/views/Reponses/afficher.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Reponses/afficher.html.twig
@@ -32,11 +32,11 @@
 
             <div class="consultation-content follow">
                 <div class="menu-tab">
-                    <a class="item questions active">
-                        Propositions
-                    </a>
+                    <a class="active item questions">
+                        <i class="fa fa-list" aria-hidden="true"></i>Propositions
+                    </a> 
                     <a class="item answers" href="{{ url('Organisme_consultation_questions', { 'id' : reponse.consultation.id }) }}">
-                        Questions
+                        <i class="fa fa-eye" aria-hidden="true"></i>Questions
                     </a>
 
                     <span class="date">
