--- a/src/Flair/UserBundle/Resources/views/Inscription/inscriptionOrganisme.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Inscription/inscriptionOrganisme.html.twig
@@ -87,13 +87,16 @@
                 <div class="col-lg-12">
                     {{ form_row(form.emailPartenaire) }}
                   </div>
-                  <div class="col-lg-12">
+                  <br>
+                  <br>
+                  <div class="col-lg-12" style="float:left">
+
                     {{ form_row(form.cgu) }}
                 </div>
                     <div class="control-group bt_form_row">
                         <label>&nbsp;</label>
                         <div class="controls" style="float:right">
-                            <input type="submit" class="btn orange" value="Enregistrer" />
+                            <input type="submit" class="btn btn-warning" value="Enregistrer" />
                         </div>
                     </div>
                     <br>
