--- a/src/Flair/PrestataireBundle/Resources/views/Questions/lister.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Questions/lister.html.twig
@@ -4,18 +4,16 @@
 <div class="container">
   <div class="row">
       <div class="col-lg-12">
-          <h1 class="page-header">Mes propositions
-          </h1>
+        <h1 class="page-header">Questions/Réponses
+        </h1>
           <ol class="breadcrumb">
               <li><a href="{{url('Homepage')}}">Accueil</a></li>
-              <li><a href="{{url('Prestataire_propositions')}}">Mes propositions</a></li>
-              <li class="active">Consultation : {{ reponse.consultation.titre }}</li>
-
+              <li>Questions/Réponses</li>
 
               <div class="btn-bar" style="float:right">
-                  <a href="{{ url('Prestataire_propositions') }}">
+                  <a onClick="window.history.go(-1);">
                   <i class="fa fa-undo"></i>
-                      Retour à la liste
+                      Retour
                   </a>
                   <div class="corner"></div>
               </div>
@@ -24,19 +22,19 @@
   </div>
 
         <div style="margin-bottom: 20px">
-            <a class="btn orange" href="{{ url("Prestataire_propositions_questions_poser", {id: reponse.id}) }}">Poser une question</a>
+            <a class="btn btn-warning" href="{{ url("Prestataire_propositions_questions_poser", {id: reponse.id}) }}">Poser une question</a>
         </div>
 
         <table class="table table-bordered table-striped">
             <tr style="font-size: 22px">
-                <th style="width: 80%">Titre</th>
+                <th style="width: 80%">Sujet</th>
                 <th>Action</th>
             </tr>
 
             {% for question in questions %}
             <tr>
                 <td>{{ question.titre }}</td>
-                <td><a href="{{ url("Prestataire_propositions_questions_afficher", {id: question.id}) }}">Voir</a></td>
+                <td><a href="{{ url("Prestataire_propositions_questions_afficher", {id: question.id}) }}"><i class="fa fa-eye" aria-hidden="true"></i> Voir</a> </td>
             </tr>
             {% endfor %}
         </table>
