--- a/src/Flair/PrestataireBundle/Resources/views/Reponses/afficher.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Reponses/afficher.html.twig
@@ -4,18 +4,16 @@
 <div class="container">
   <div class="row">
       <div class="col-lg-12">
-          <h1 class="page-header">Mes propositions
+          <h1 class="page-header">Réponses
           </h1>
           <ol class="breadcrumb">
               <li><a href="{{url('Homepage')}}">Accueil</a></li>
-              <li><a href="{{url('Prestataire_propositions')}}">Mes propositions</a></li>
-              <li class="active">Consultation : {{ reponse.consultation.titre }}</li>
-
+              <li>Questions/Réponses</li>
 
               <div class="btn-bar" style="float:right">
-                  <a href="{{ url('Prestataire_propositions') }}">
+                  <a onClick="window.history.go(-1);">
                   <i class="fa fa-undo"></i>
-                      Retour à la liste
+                      Retour
                   </a>
                   <div class="corner"></div>
               </div>
