Modification mentions légales & CGU.pdf

--- a/src/Flair/CoreBundle/Resources/views/Homepage/mentionsLegales.html.twig
+++ b/src/Flair/CoreBundle/Resources/views/Homepage/mentionsLegales.html.twig
@@ -23,9 +23,16 @@
 <div class="row">
     <div class="col-lg-12">
     <p>
-        Le présent site est la propriété de Frogmood, Société à responsabilité limitée, au capital de
-        5000 €, immatriculée au RCS de Paris sous le numéro 513 528 190, dont le siège social est
-        situé au 10 rue Versigny 75018 Paris – Numéro TVA : FR27513528190
+        <p>Le présent site est la propriété de Frogmood,</p>
+
+        <p>
+          <br><b>Dénomination sociale : </b>Mise en concurrence<br>
+          <br><b>Forme : </b>Société à responsabilité limitée au capital de 5000 €<br>
+          <br><b>RCS : </b>Paris - 513 528 190<br>
+          <br><b>N° de TVA Intracommunautaire : </b>FR27513528190<br>
+          <br><b>Siège social : </b>10 rue Versigny 75018 Paris<br>
+          <br><b>Contact : </b>Contact@mise-en-concurrence.fr<br>
+        </p>
 
     </p>
 
