--- a/app/Resources/views/form/default_form_theme.html.twig
+++ b/app/Resources/views/form/default_form_theme.html.twig
@@ -30,18 +30,23 @@
     </div>
 {% endblock %}
 
+
 {% block radio_widget %}
     <label class="radio">
         <input type="radio" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
-        {{ label | trans({}, translation_domain) }}
+        {#{{ label | trans({}, translation_domain) }} #}
     </label>
 {% endblock radio_widget %}
+
+
 
 {% block choice_widget_expanded %}
     {% spaceless %}
         <div {{ block('widget_container_attributes') }}>
             {% for child in form %}
-                {{ form_widget(child) }}
+                {{ form_row(child) }}
+                {#{{ form_label(child) }}
+                {{ form_widget(child) }}#}
             {% endfor %}
         </div>
     {% endspaceless %}
@@ -58,3 +63,5 @@
         {% endif %}
     {% endspaceless %}
 {% endblock form_errors %}
+
+
