--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1231,7 +1231,7 @@ input[type="text"].search {
   margin-top: 1.5%;
 }
 .consultation-content .actions {
-  margin-top: 10px;
+  margin-top: 10%;
   margin-bottom: 30px;
   float: right;
   margin-right: 2%;
