--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1231,7 +1231,7 @@ input[type="text"].search {
   margin-top: 1.5%;
 }
 .consultation-content .actions {
-  margin-top: 10px;
+  margin-top: 10%;
   margin-bottom: 30px;
   float: right;
   margin-right: 2%;
@@ -1350,7 +1350,7 @@ input[type="text"].search {
   line-height: 2.428571;
 }
 .hp-process{
-  margin-left: 16%;
+  margin-left: 10%;
 }
 
 .hp-list {
