--- a/src/Flair/PrestataireBundle/Resources/views/Reponses/etape2_documents.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Reponses/etape2_documents.html.twig
@@ -52,7 +52,7 @@
                     <a class="add btn orange diffuse black">Télécharger votre devis</a>
                 </div>
 
-                <form action="" method="post" enctype="multipart/form-data" class="form-horizontal" novalidate="" style="margin-top: 100px;">
+                <form action="" method="post" enctype="multipart/form-data" class="form-horizontal" novalidate="" style="margin-top: 100px;display: inline-block">
                     {{ form_row(form.montantHt) }}
                     {{ form_row(form.montantTtc) }}
 
@@ -79,7 +79,7 @@
 
                     <div class="actions">
                         <input class="btn js_draft" name="brouillon" type="submit" value="Enregistrer en brouillon"/>
-                        <input type="submit" value="Suivant" class="next btn orange"/>
+                        <input type="submit" value="Suivant" class="next btn btn-warning"/>
                     </div>
                 </form>
             </div>
