--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Mise en concurrence</title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico?v1" />
+  <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
 
   <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('stylesheets/select2.min.css') }}" />
