Bug fixe upgrade symfony 2.4 to 3.2

--- a/src/Flair/UserBundle/Resources/views/Inscription/inscriptionPrestataire.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Inscription/inscriptionPrestataire.html.twig
@@ -29,7 +29,7 @@
 
         {{ form_errors(form) }}
 
-        <form method="POST" class="form-horizontal" {{ form_enctype(form) }} id="inscription">
+        <form method="POST" class="form-horizontal" id="inscription">
 
             {{ form_row(form.email) }}
             {{ form_row(form.password) }}
